--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -9,14 +5,7 @@
   text-align: center;
 }
 
-.logo-box {
-  position: relative;
-  height: 9em;
-}
-
 .logo {
-  position: absolute;
-  left: calc(50% - 4.5em);
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -24,6 +13,9 @@
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
@@ -36,7 +28,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .logo.electron {
+  a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
@@ -47,10 +39,4 @@
 
 .read-the-docs {
   color: #888;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
